feat: manage user groups
