# internal/router/admin_router.go
@@ -32,6 +32,10 @@ func setupAdminRoutes(
 			authRequired.PUT("/user/:id", userH.Update)
 			authRequired.DELETE("/user/:id", userH.Delete)
 			authRequired.PATCH("/user/:id/quota", userH.UpdateQuota)
+			authRequired.GET("/groups", userH.ListGroups)
+			authRequired.POST("/groups", userH.CreateGroup)
+			authRequired.PUT("/groups/:id", userH.UpdateGroup)
+			authRequired.DELETE("/groups/:id", userH.DeleteGroup)
 			authRequired.GET("/redem", userH.ListRedemCodes)
 			authRequired.POST("/redem", userH.CreateRedemCodes)
 			authRequired.PATCH("/redem/:id/disable", userH.DisableRedemCode)
